--- a/introduction.html
+++ b/introduction.html
@@ -7,7 +7,7 @@
 <div class="wrapper">
 	<h1>Enter the dragon Below the Waterfall</h1><br/>
 </div>
-<script src="intro_script.js">
+<script src="script/intro_script.js">
  	// Your JavaScript goes here!
 
   </script>
