--- a/introduction.html
+++ b/introduction.html
@@ -1,6 +1,12 @@
 <head>
   <title>Introduction</title>
   <link rel="stylesheet"type="text/css" href="styles/style.css">
+  <p class="codepen" data-height="265" data-theme-id="light" data-default-tab="js,result" data-user="snorkltv" data-slug-hash="BajxopX" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="GreenSock Stagger From End">
+  <span>See the Pen <a href="https://codepen.io/snorkltv/pen/BajxopX">
+  GreenSock Stagger From End</a> by Snorkl.tv (<a href="https://codepen.io/snorkltv">@snorkltv</a>)
+  on <a href="https://codepen.io">CodePen</a>.</span>
+</p>
+<script async src="https://static.codepen.io/assets/embed/ei.js"></script>
 </head>
 <body>
 <link href="https://fonts.googleapis.com/css?family=Kanit:300,400,600&display=swap" rel="stylesheet">
