--- a/introduction.html
+++ b/introduction.html
@@ -1,14 +1,19 @@
 <head>
   <title>Introduction</title>
   <link rel="stylesheet"type="text/css" href="styles/style.css">
-  <script async="" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.4/gsap.min.js"></script>
-  <script async="" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/GSDevTools3.min.js"></script>
-  <script async="" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/SplitText3.min.js"></script>
+  
 </head>
 <body>
-<link href="https://fonts.googleapis.com/css?family=Kanit:300,400,600&display=swap" rel="stylesheet">
-<div class="wrapper">
-	<h1>Enter the dragon Below the Waterfall</h1><br/>
+<div class="css-typing">
+  <p>
+    Typed text 1
+  </p>
+  <p>
+    Typed text 2 Longer
+  </p>
+  <p>
+    Typed text 3
+  </p>
 </div>
 <script src="script/intro_script.js">
  	// Your JavaScript goes here!
