--- a/introduction.html
+++ b/introduction.html
@@ -7,13 +7,17 @@
 <h1>Introduction</h1>  
 <div class="css-typing">
   <p>
-    Q: What is Computational Sustainability?<br>
+    Q: What is Computational Sustainability?
+  </p>
+  <p>
     A: "Computational Sustainability is an interdisciplinary field that aims to apply techniques from computer science, information science,
     operations research, applied mathematics, and statistics for balancing environmental, economic, and societal needs for sustainable development" 
     (Gomez and Sabharwal).
   </p>
   <p>
-    Q: Why Computational Sustainability and not another topic?<br>
+    Q: Why Computational Sustainability and not another topic?
+  </p>
+  <p>
     A: I chose computational sustainability as my topic because it relates to my major. I am currently a computer science major. 
     When I was first thinking about what I wanted my topic to be I had a couple initial ideas, but none were really sticking. 
     I decided to see if there was any area of environmental stewardship that had to do with computer science and that's how I found out 
@@ -21,7 +25,9 @@
     It involved something I am passionate about so it was the perfect topic for me. 
   </p>
   <p>
-    Q: Why should you care about Computational Sustainability?<br>
+    Q: Why should you care about Computational Sustainability?
+  </p>
+  <p>
     A: There are so many interesting applications and research being done in this field. It has so much potential to do good and help better the planet.
     It may sound boring and sound like it is just a bunch of technical jargon, but it is more than that!
   </p>
