--- a/introduction.html
+++ b/introduction.html
@@ -5,33 +5,7 @@
 </head>
 <body>
 <h1>Introduction</h1>  
-<div class="css-typing">
-  <p>
-    Q: What is Computational Sustainability?
-  </p>
-  <p>
-    A: "Computational Sustainability is an interdisciplinary field that aims to apply techniques from computer science, information science,
-    operations research, applied mathematics, and statistics for balancing environmental, economic, and societal needs for sustainable development" 
-    (Gomez and Sabharwal).
-  </p>
-  <p>
-    Q: Why Computational Sustainability and not another topic?
-  </p>
-  <p>
-    A: I chose computational sustainability as my topic because it relates to my major. I am currently a computer science major. 
-    When I was first thinking about what I wanted my topic to be I had a couple initial ideas, but none were really sticking. 
-    I decided to see if there was any area of environmental stewardship that had to do with computer science and that's how I found out 
-    about computational sustainability. The more I read into computational sustainability then more I knew that this is what my topic should be. 
-    It involved something I am passionate about so it was the perfect topic for me. 
-  </p>
-  <p>
-    Q: Why should you care about Computational Sustainability?
-  </p>
-  <p>
-    A: There are so many interesting applications and research being done in this field. It has so much potential to do good and help better the planet.
-    It may sound boring and sound like it is just a bunch of technical jargon, but it is more than that!
-  </p>
-</div>
+<div id="typedtext"></div>
 <script src="script/intro_script.js">
  	// Your JavaScript goes here!
 
