--- a/introduction.html
+++ b/introduction.html
@@ -1,6 +1,7 @@
 <head>
   <title>Introduction</title>
   <link rel="stylesheet"type="text/css" href="styles/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet">
   
 </head>
 <body>
