--- a/introduction.html
+++ b/introduction.html
@@ -1,6 +1,6 @@
 <head>
   <title>Introduction</title>
-  <link rel="stylesheet"type="text/css" href="styles/style.css">
+  <link rel="stylesheet"type="text/css" href="styles/intro_style.css">
   <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet">
   
 </head>
